force-app/main/default/objects/maps__Location__c/maps__Location__c.object-meta.xml
<CustomObject>
    <label>Maps Location</label>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>