force-app/main/default/objects/maps__Location__c/fields/maps__Address__c.field-meta.xml
<CustomField>
    <fullName>maps__Address__c</fullName>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>