force-app/main/default/objects/maps__Location__c/fields/maps__AddressFields__c.field-meta.xml
<CustomField>
    <fullName>maps__AddressFields__c</fullName>
    <label>AddressFields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>