force-app/main/default/objects/maps__Location__c/fields/maps__DateTime__c.field-meta.xml
<CustomField>
    <fullName>maps__DateTime__c</fullName>
    <label>Date Time</label>
    <type>DateTime</type>
</CustomField>