force-app/main/default/objects/maps__Location__c/fields/maps__FavoriteMarker__c.field-meta.xml
<CustomField>
    <fullName>maps__FavoriteMarker__c</fullName>
    <label>Favorite Marker</label>
    <type>TextArea</type>
</CustomField>