force-app/main/default/objects/maps__Location__c/fields/maps__IsEnd__c.field-meta.xml
<CustomField>
    <fullName>maps__IsEnd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is End</label>
    <type>Checkbox</type>
</CustomField>