force-app/main/default/objects/maps__Location__c/fields/maps__IsSchedule__c.field-meta.xml
<CustomField>
    <fullName>maps__IsSchedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Schedule</label>
    <type>Checkbox</type>
</CustomField>