force-app/main/default/objects/maps__Location__c/fields/maps__IsStart__c.field-meta.xml
<CustomField>
    <fullName>maps__IsStart__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Start</label>
    <type>Checkbox</type>
</CustomField>