force-app/main/default/objects/maps__Location__c/fields/maps__Latitude__c.field-meta.xml
<CustomField>
    <fullName>maps__Latitude__c</fullName>
    <label>Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>