force-app/main/default/objects/maps__Location__c/fields/maps__ResourceId__c.field-meta.xml
<CustomField>
    <fullName>maps__ResourceId__c</fullName>
    <label>Resource Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>